@@ -1,4 +1,6 @@
 0.2.0
+Plugins can now be enabled and disabled from the plug prefs.
+Moved to plug code to PluginClass;
 Fixed not finding more than one plugin.
 Fixed Makefile dependency.
 Fixed built in doc viewer not showing correct title.
